<resources>
    <string name="app_name">DriveChain</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="endpoint">Please provide the host and port of your Burrow node</string>
    <string name="save">Save</string>
    <string name="edit_host">change host</string>
    <string name="connect_bluetooth">click to connect to obd2</string>
    <string name="title_none_paired">You have no paired devices, make sure to pair Your phone with the OBD2 dongle</string>
    <string name="host">Host</string>
    <string name="start_trip">Start Trip</string>
    <string name="menu_item">menu_item</string>
    <string name="TODO">TODO</string>
    <string name="acm">Access Management</string>
    <string name="new_trip">New Trip</string>
    <string name="exit">Exit App</string>
    <string name="trips">Trips</string>
    <string name="settings">Settings...</string>
    <string name="driving">Trip</string>
    <string name="current_score">Current Score</string>
    <string name="pause_trip">Pause Trip</string>
    <string name="stop_trip">Stop Trip</string>
    <string name="latest_trips">Latest Trips</string>
    <string name="overall_score">Overall Score</string>
    <string name="has_access">Who has Access?</string>
    <string name="grant_access">Grant Access</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="address">address</string>
    <string name="connect">Connect</string>
    <string name="choose_bluetooth_device">Choose a bluetooth device to connect to</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="overview">Overview</string>
    <string name="change">Change</string>
    <string name="grant_button">Grant</string>
    <string name="connect_server">click to connect to server</string>
    <string name="connect_to_server_view_title">Connect to Server</string>
    <string name="connect_to_bluetooth_view_title">Connect to Bluetooth Device</string>
    <string name="connected">connected</string>
    <string name="remove_access">remove access</string>
    <string name="not_connected">not connected to server</string>
    <string name="who_has_access">These people have access:</string>
    <string name="put_your_address_here">address</string>
    <string name="ppp">...</string>
</resources>
