<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:divider="@drawable/linear_layout_divider_long"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:showDividers="beginning|middle">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/linear_layout_divider_long"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:showDividers="middle"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="1dp"
                android:layout_height="?attr/actionBarSize" />

            <EditText
                android:id="@+id/give_access_edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/put_your_address_here"/>

            <Button
                android:id="@+id/grant_access_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/grant_access"
                android:onClick="grantAccessClicked"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/who_has_access"/>

            <ListView
                android:id="@+id/list_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice"
                android:orientation="vertical" />

            <Button
                android:id="@+id/remove_access_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/remove_access"
                android:onClick="removeAccessClicked"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="?attr/actionBarSize" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu" />

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.v4.widget.DrawerLayout>