<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:divider="@drawable/linear_layout_divider_long"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:showDividers="beginning|middle">

        <TextView
            android:layout_width="1dp"
            android:layout_height="?attr/actionBarSize" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/linear_layout_divider_short"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:id="@+id/login_error"
                android:layout_width="200dp"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/host"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/host" />

            <EditText
                android:id="@+id/pw"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/linear_layout_divider_short"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:showDividers="middle">

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:onClick="connectClicked"
                android:text="@string/connect" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu" />

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.v4.widget.DrawerLayout>