<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:divider="@drawable/linear_layout_divider_long"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:showDividers="beginning|middle">

        <TextView
            android:layout_width="1dp"
            android:layout_height="?attr/actionBarSize" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/linear_layout_divider_short"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:showDividers="middle">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/linear_layout_divider_long"
                android:orientation="horizontal"
                android:showDividers="beginning|middle|end">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/from"></TextView>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/to"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/linear_layout_divider_long"
                android:orientation="horizontal"
                android:showDividers="beginning|middle|end">

                <DatePicker
                    android:layout_width="100dp"
                    android:layout_height="50dp"></DatePicker>

                <DatePicker
                    android:layout_width="100dp"
                    android:layout_height="50dp"></DatePicker>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/linear_layout_divider_long"
                android:orientation="vertical"
                android:showDividers="beginning|middle|end"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/linear_layout_divider_long"
                    android:orientation="horizontal"
                    android:showDividers="beginning|middle|end">

                    <CheckBox
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/TODO" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/linear_layout_divider_long"
                    android:orientation="horizontal"
                    android:showDividers="beginning|middle|end">

                    <CheckBox
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/TODO" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/linear_layout_divider_long"
                    android:orientation="horizontal"
                    android:showDividers="beginning|middle|end">

                    <CheckBox
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/TODO" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/linear_layout_divider_long"
                    android:orientation="horizontal"
                    android:showDividers="beginning|middle|end">

                    <CheckBox
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/TODO" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/linear_layout_divider_long"
                    android:orientation="horizontal"
                    android:showDividers="beginning|middle|end">

                    <CheckBox
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/TODO" />
                </LinearLayout>


            </LinearLayout>

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:text="@string/grant_button"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu" />

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </FrameLayout>

</android.support.v4.widget.DrawerLayout>